[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://audio/Tile_Small_Crack_1.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/Tile_Cracks_1.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/Background_Music_smaller.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/place_tile/Place_River.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/place_tile/Place_Wind_Farm.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/place_tile/Place_Swamp.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/place_tile/Place_Desert.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Select_Tile.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/place_tile/Place_Farm.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/place_tile/Place_Ocean.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/place_tile/Place_Plains.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/kenney-click1.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/Tile_Small_Crack_3.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/Tile_Small_Crack_4.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/place_tile/Place_Tile.mp3" type="AudioStream" id=16]
[ext_resource path="res://audio/place_tile/Place_Coal_Plant.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/place_tile/Place_Geothermal_Plant.wav" type="AudioStream" id=18]
[ext_resource path="res://audio/Menu_Music.ogg" type="AudioStream" id=19]
[ext_resource path="res://audio/Win.wav" type="AudioStream" id=20]
[ext_resource path="res://audio/place_tile/Place_Nuclear_Plant.wav" type="AudioStream" id=21]
[ext_resource path="res://audio/place_tile/Place_Refinery.wav" type="AudioStream" id=22]
[ext_resource path="res://audio/place_tile/Place_Forest.wav" type="AudioStream" id=23]
[ext_resource path="res://audio/place_tile/Place_Hill.wav" type="AudioStream" id=24]
[ext_resource path="res://audio/place_tile/Place_Tidal_Farm.wav" type="AudioStream" id=25]
[ext_resource path="res://audio/place_tile/Place_Solar_Farm.wav" type="AudioStream" id=26]
[ext_resource path="res://audio/Defeat.wav" type="AudioStream" id=27]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -5.0

[node name="GameWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0

[node name="GameLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -5.0

[node name="UIAction" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="TileDamage1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TileDamage2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="TileDamage3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="TileBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SelectTile" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="TilePlains" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="TileRiver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="TileOcean" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="TileDesert" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="TileForest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -5.0

[node name="TileHill" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -5.0

[node name="TileSwamp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="TileFarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="TileWindFarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="TileNuclearPlant" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -5.0

[node name="TileCoalPlant" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="TileSolarFarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -5.0

[node name="TileTidalFarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -5.0

[node name="TileGeothermalPlant" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -5.0

[node name="TileRefinery" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -5.0

[node name="TileGeneric" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0
